QJS/QJS.h

typedef void* RuntimeHandle;
typedef void* ContextHandle;
struct ValueHandle
{
	ContextHandle ctx;
	uint64_t value;
};
//Js value类型
enum ValueType
{
	JS_TYPE_UNINITIALIZED = 0,
	JS_TYPE_INT = 1,
	JS_TYPE_BOOL = 2,
	JS_TYPE_NULL = 3,
	JS_TYPE_UNDEFINED = 4,
	JS_TYPE_CATCH_OFFSET = 5,
	JS_TYPE_EXCEPTION = 6,
	JS_TYPE_FLOAT64 = 7,

	/* all tags with a reference count have 0b1000 bit */
	JS_TYPE_OBJECT = 8,
	JS_TYPE_FUNCTION_BYTECODE = 9, /* used internally */
	JS_TYPE_MODULE = 10, /* used internally */
	JS_TYPE_STRING = 11,
	JS_TYPE_SYMBOL = 12,
	JS_TYPE_BIG_FLOAT = 13,
	JS_TYPE_BIG_INT = 14,
	JS_TYPE_BIG_DECIMAL = 15,
};
//创建js运行时
QJS_API RuntimeHandle NewRuntime();
//销毁js运行时
QJS_API void FreeRuntime(RuntimeHandle runtime);
//get set runtime userdata
QJS_API void SetRuntimeUserData(RuntimeHandle runtime, void* user_data);
QJS_API void* GetRuntimeUserData(RuntimeHandle runtime);
//创建js上下文
QJS_API ContextHandle NewContext(RuntimeHandle runtime);
//销毁js上下文
QJS_API void FreeContext(ContextHandle ctx);
//get set context userdata
QJS_API void SetContextUserData(ContextHandle ctx, void* user_data);
QJS_API void* GetContextUserData(ContextHandle ctx);
//获得顶层对象
QJS_API ValueHandle GetGlobalObject(ContextHandle ctx);
//运行脚本
QJS_API ValueHandle RunScript(ContextHandle ctx, const char* script, ValueHandle parent, const char* filename="");
//执行js中函数，没有参数时args=NULL并且argc=0
QJS_API ValueHandle CallJsFunction(ContextHandle ctx, ValueHandle jsFunction, ValueHandle args[], int argc, ValueHandle parent);
//根据名称取得一个js变量值
QJS_API ValueHandle GetNamedJsValue(ContextHandle ctx, const char* varName, ValueHandle parent);
//JS的undefined值
QJS_API ValueHandle TheJsUndefined();
//ByteCode转ValueHandle
QJS_API ValueHandle ByteCodeToJsValue(ContextHandle ctx, const uint8_t* byteCode, size_t byteCodeLen);
//释放js指针
QJS_API void FreeJsPointer(ContextHandle ctx, void* ptr);
//保存ByteCode到文件
QJS_API bool SaveByteCodeToFile(const uint8_t* byteCode, size_t byteCodeLen, const char* filepath);
//执行bytecode脚本
QJS_API ValueHandle RunByteCode(ContextHandle ctx, const uint8_t* byteCode, size_t byteCodeLen);
//获得ValueHandle的类型
QJS_API ValueType GetValueType(ValueHandle value);
QJS_API bool JsValueIsString(ValueHandle value);
QJS_API bool JsValueIsInt(ValueHandle value);
QJS_API bool JsValueIsNumber(ValueHandle value);
QJS_API bool JsValueIsDouble(ValueHandle value);
QJS_API bool JsValueIsBool(ValueHandle value);
QJS_API bool JsValueIsObject(ValueHandle value);
QJS_API bool JsValueIsArray(ContextHandle ctx, ValueHandle value);
QJS_API bool JsValueIsFunction(ContextHandle ctx, ValueHandle value);
QJS_API bool JsValueIsException(ValueHandle value);
QJS_API bool JsValueIsUndefined(ValueHandle value);
QJS_API bool JsValueIsNull(ValueHandle value);
QJS_API bool JsValueIsDate(ContextHandle ctx, ValueHandle value);
//js value to string
QJS_API ValueHandle JsonStringify(ContextHandle ctx, ValueHandle value);
//json string to js value
QJS_API ValueHandle JsonParse(ContextHandle ctx, const char* json);
//获得异常
//Most C functions can return a Javascript exception.c
//It must be explicitly tested and handled by the C code.
//The specific JSValue JS_EXCEPTION indicates that an exception occurred.
//The actual exception object is stored in the JSContext and can be retrieved with GetException()
QJS_API ValueHandle GetAndClearJsLastException(ContextHandle ctx);
//处理事件
// return < 0 if exception, 
// return 0 if no job pending, 
// return 1 if a job was executed successfully, the context of the job is stored in 'outCurCtx'
QJS_API int ExecutePendingJob(RuntimeHandle runtime, void*& outCurCtx);
//开启调试模式
QJS_API void SetDebuggerMode(ContextHandle ctx, bool onoff);
//调试行回调
typedef void (*FN_DebuggerLineCallback)(ContextHandle ctx, uint32_t line_no, const uint8_t* pc, void* user_data);
//设置调试行回调
QJS_API void SetDebuggerLineCallback(ContextHandle ctx, FN_DebuggerLineCallback cb, void* user_data);
//获得调试时的堆栈深度
QJS_API uint32_t GetDebuggerStackDepth(ContextHandle ctx);
//获得回溯
QJS_API ValueHandle GetDebuggerBacktrace(ContextHandle ctx, const uint8_t* pc);
//获得调试变量（只读）
QJS_API ValueHandle GetDebuggerClosureVariables(ContextHandle ctx, int stack_idx);
QJS_API ValueHandle GetDebuggerLocalVariables(ContextHandle ctx, int stack_idx);