CSharp/QJSharp/QJS.cs


        [DllImport("QJS.dll", EntryPoint = "ByteCodeToJsValue")]
        private static extern ValueHandle ByteCodeToJsValue(UIntPtr ctx, IntPtr byteCode, int byteCodeLen);

        [DllImport("QJS.dll", EntryPoint = "SaveByteCodeToFile")]
        public static extern bool SaveByteCodeToFile(IntPtr byteCode, int byteCodeLen, string filepath);

        [DllImport("QJS.dll", EntryPoint = "RunByteCode")]
        private static extern ValueHandle RunByteCode(UIntPtr ctx, IntPtr byteCode, int byteCodeLen);

        [DllImport("QJS.dll", EntryPoint = "GetValueType")]
        public static extern ValueType GetValueType(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsString")]
        public static extern bool JsValueIsString(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsInt")]
        public static extern bool JsValueIsInt(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsNumber")]
        public static extern bool JsValueIsNumber(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsDouble")]
        public static extern bool JsValueIsDouble(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsBool")]
        public static extern bool JsValueIsBool(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsObject")]
        public static extern bool JsValueIsObject(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsArray")]
        public static extern bool JsValueIsArray(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsFunction")]
        public static extern bool JsValueIsFunction(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsException")]
        public static extern bool JsValueIsException(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsUndefined")]
        public static extern bool JsValueIsUndefined(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsNull")]
        public static extern bool JsValueIsNull(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsDate")]
        public static extern bool JsValueIsDate(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueIsGlobalObject")]
        private static extern bool JsValueIsGlobalObject(UIntPtr ctx, ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsonStringify")]
        private static extern ValueHandle JsonStringify(UIntPtr ctx, ValueHandle value,
            ValueHandle replacer/*=TheJsUndefined()*/, ValueHandle space/*=TheJsUndefined()*/);

        [DllImport("QJS.dll", EntryPoint = "JsonParse")]
        private static extern ValueHandle JsonParse(UIntPtr ctx, byte[] json);

        [DllImport("QJS.dll", EntryPoint = "GetAndClearJsLastException")]
        private static extern ValueHandle GetAndClearJsLastException(UIntPtr ctx);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate ValueHandle JsJobCallback(UIntPtr ctx, int argc, ref ValueHandle argv);
        [DllImport("QJS.dll", EntryPoint = "EnqueueJob")]
        private static extern bool EnqueueJob(UIntPtr ctx, JsJobCallback funcJob, ref ValueHandle args, int argc);

        [DllImport("QJS.dll", EntryPoint = "ExecutePendingJob")]
        private static extern int ExecutePendingJob(UIntPtr runtime, ref IntPtr outRawCtx);

        [DllImport("QJS.dll", EntryPoint = "GetContextByRaw")]
        private static extern UIntPtr GetContextByRaw(UIntPtr runtime, IntPtr rawCtx);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate bool _WaitForExecutingJobsCallback(UIntPtr rawCurCtx, int resExecutePendingJob, IntPtr user_data);
        [DllImport("QJS.dll", EntryPoint = "WaitForExecutingJobs")]
        private static extern int WaitForExecutingJobs(UIntPtr runtime, 
            Int32 loopIntervalMS, _WaitForExecutingJobsCallback cb, IntPtr user_data);

        [DllImport("QJS.dll", EntryPoint = "SetDebuggerMode")]
        private static extern void SetDebuggerMode(UIntPtr ctx, bool onoff);

        [DllImport("QJS.dll", EntryPoint = "GetDebuggerMode")]
        private static extern bool GetDebuggerMode(UIntPtr ctx);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void DebuggerLineCallback(UIntPtr ctx, UInt32 line_no, UIntPtr pc, IntPtr user_data);
        [DllImport("QJS.dll", EntryPoint = "SetDebuggerLineCallback")]
        private static extern void SetDebuggerLineCallback(UIntPtr ctx, DebuggerLineCallback cb, IntPtr user_data);

        [DllImport("QJS.dll", EntryPoint = "GetDebuggerLineCallback")]
        private static extern bool GetDebuggerLineCallback(UIntPtr ctx, ref DebuggerLineCallback out_cb, ref IntPtr out_user_data);

        [DllImport("QJS.dll", EntryPoint = "GetDebuggerStackDepth")]
        private static extern UInt32 GetDebuggerStackDepth(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "GetDebuggerBacktrace")]
        private static extern ValueHandle GetDebuggerBacktrace(UIntPtr ctx, UIntPtr pc);

        [DllImport("QJS.dll", EntryPoint = "GetDebuggerClosureVariables")]
        private static extern ValueHandle GetDebuggerClosureVariables(UIntPtr ctx, int stack_idx);

        [DllImport("QJS.dll", EntryPoint = "GetDebuggerLocalVariables")]
        private static extern ValueHandle GetDebuggerLocalVariables(UIntPtr ctx, int stack_idx);

        [DllImport("QJS.dll", EntryPoint = "LoadExtend")]
        private static extern int LoadExtend(UIntPtr ctx, string extendFile, ValueHandle parent, IntPtr userData/* = NULL*/);

        [DllImport("QJS.dll", EntryPoint = "GetExtendList")]
        private static extern IntPtr GetExtendList(UIntPtr ctx, ref int outLen);

        [DllImport("QJS.dll", EntryPoint = "GetExtendHandle")]
        private static extern UIntPtr GetExtendHandle(UIntPtr ctx, int extendId);

        [DllImport("QJS.dll", EntryPoint = "GetExtendFile")]
        private static extern IntPtr GetExtendFile(UIntPtr ctx, int extendId);

        [DllImport("QJS.dll", EntryPoint = "GetExtendParentObject")]
        private static extern ValueHandle GetExtendParentObject(UIntPtr ctx, int extendId);

        [DllImport("QJS.dll", EntryPoint = "UnloadExtend")]
        private static extern void UnloadExtend(UIntPtr ctx, int extendId);

        [DllImport("QJS.dll", EntryPoint = "FreeValueHandle")]
        public static extern void FreeValueHandle(ref ValueHandle value);
        #endregion

        UIntPtr m_runtime;
        UIntPtr m_ctx;

        private static IntPtr StructArrayConvertToIntPtr(ValueHandle[] valArr)
        {
            // 2. 计算结构体大小
            int structSize = Marshal.SizeOf(typeof(ValueHandle));

            // 3. 分配非托管内存
            IntPtr ptr = Marshal.AllocHGlobal(structSize * valArr.Length);

            try
            {
                // 4. 逐个复制结构体到非托管内存
                for (int i = 0; i < valArr.Length; i++)
                {
                    IntPtr current = new IntPtr(ptr.ToInt64() + (i * structSize));
                    Marshal.StructureToPtr(valArr[i], current, false);
                }

                return ptr;
            }
            catch
            {
                // 发生异常时释放内存
                Marshal.FreeHGlobal(ptr);
                return IntPtr.Zero;
            }
        }

        private static ValueHandle[] IntPtrConvertToStructArray(IntPtr ptr, int length)
        {
            // 2. 计算结构体大小
            int structSize = Marshal.SizeOf(typeof(ValueHandle));

            // 3. 创建目标数组
            ValueHandle[] structArray = new ValueHandle[length];

            // 4. 逐个从非托管内存复制到结构体数组
            for (int i = 0; i < length; i++)
            {
                IntPtr current = new IntPtr(ptr.ToInt64() + (i * structSize));
                structArray[i] = Marshal.PtrToStructure<ValueHandle>(current);
            }

            return structArray;
        }

        public QJS()
        {
            m_runtime = NewRuntime();
            m_ctx = NewContext(m_runtime);
        }
        public void Dispose()
        {
            FreeContext(m_ctx);
            FreeRuntime(m_runtime);
            m_ctx = UIntPtr.Zero;
            m_runtime = UIntPtr.Zero;
        }

        public void Reset()
        {
            ResetContext(m_ctx);
        }

        private Dictionary<int, Object> m_runtimeUserDatas = new Dictionary<int, Object>();
        private int m_runtimeUserDataIndex = 0;
        public void SetRuntimeUserData(int key, Object user_data)
        {
            m_runtimeUserDatas[++m_runtimeUserDataIndex] = user_data;
            SetRuntimeUserData(m_runtime, key, (IntPtr)m_runtimeUserDataIndex);
        }
        public Object GetRuntimeUserData(int key)
        {
            int idx = (int)GetRuntimeUserData(m_runtime, key);
            if (m_runtimeUserDatas.TryGetValue(idx, out Object user_data))
            {
                return user_data;
            }
            return null;
        }

        private Dictionary<int, Object> m_contextUserDatas = new Dictionary<int, Object>();
        private int m_contextUserDataIndex = 0;
        public void SetContextUserData(int key, Object user_data)
        {
            m_contextUserDatas[++m_contextUserDataIndex] = user_data;
            SetContextUserData(m_ctx, key, (IntPtr)m_contextUserDataIndex);
        }
        public Object GetContextUserData(int key)
        {
            int idx = (int)GetContextUserData(m_ctx, key);
            if (m_contextUserDatas.TryGetValue(idx, out Object user_data))
            {
                return user_data;
            }
            return null;
        }

        public ValueHandle GetGlobalObject()
        {
            return GetGlobalObject(m_ctx);
        }

        public void SetFreeingContextCallback(OnFreeingContextCallback cb)
        {
            SetFreeingContextCallback(m_ctx, cb);
        }

        public bool RemoveFreeingContextCallback(OnFreeingContextCallback cb)
        {
            return RemoveFreeingContextCallback(m_ctx, cb);
        }

        public byte[] LoadFile(string filename)
        {
            UInt64 outLen = 0;
            IntPtr data = LoadFile(m_ctx, out outLen, filename);
            if (data == IntPtr.Zero)
                return null;
            byte[] bytes = new byte[outLen];
            if (outLen == 0)
                return bytes;
            Marshal.Copy(data, bytes, 0, (int)outLen);
            FreeJsPointer(m_ctx, data);
            return bytes;
        }

        public ValueHandle RunScript(string script, ValueHandle parent, string filename)
        {
            byte[] uScript = Encoding.UTF8.GetBytes(script);
            byte[] uFilename = Encoding.UTF8.GetBytes(filename);
            return RunScript(m_ctx, uScript, parent, uFilename);
        }

        public ValueHandle RunScriptFile(string filename, ValueHandle parent)
        {
            return RunScriptFile(m_ctx, filename, parent);
        }

        public ValueHandle CallJsFunction(ValueHandle jsFunction, ValueHandle[] args, ValueHandle parent)
        {
            if (args == null || args.Length == 0)
            {
                ValueHandle[] argv = new ValueHandle[0];
                return CallJsFunction(m_ctx, jsFunction, IntPtr.Zero, 0, parent);
            }
            else
            {
                IntPtr ptr = StructArrayConvertToIntPtr(args);
                return CallJsFunction(m_ctx, jsFunction, ptr, args.Length, parent);
            }
        }

        public ValueHandle GetNamedJsValue(string varName, ValueHandle parent)
        {
            byte[] uVarName = Encoding.UTF8.GetBytes(varName);
            return GetNamedJsValue(m_ctx, uVarName, parent);
        }
